--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,11 @@
 
   <link href="build/main.css" rel="stylesheet">
 
+  <!-- <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> -->
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  
+  
+  
 </head>
 <body>
 
