--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -24,11 +24,11 @@
       <ion-input type="email" [(ngModel)]="data.email"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label floating><i class="fa fa-expeditedssl" item-start></i>Password</ion-label>
+      <ion-label floating><i class="fa fa-lock" item-start></i>Password</ion-label>
       <ion-input type="password" [(ngModel)]="data.password"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label floating><i class="fa fa-expeditedssl" item-start></i>Confirm password</ion-label>
+    <ion-item> 
+      <ion-label floating><i class="fa fa-lock" item-start></i>Confirm password</ion-label>
       <ion-input type="password" [(ngModel)]="data.cpassword"></ion-input>
     </ion-item>
   </ion-list>
