--- a/src/pages/appointments/appointments.html
+++ b/src/pages/appointments/appointments.html
@@ -5,92 +5,43 @@
     </button>
     <ion-title>Appointments</ion-title>
   </ion-navbar>
-
-  <div padding>
-    <ion-segment [(ngModel)]="appointmentSegment">
-      <ion-segment-button value="offered">
-        offered
-      </ion-segment-button>
-      <ion-segment-button value="accepted">
-        Accepted
-      </ion-segment-button>
-      <ion-segment-button value="rejected">
-        Rejected
-      </ion-segment-button>
-    </ion-segment>
-  </div>
-  
 </ion-header>
 
-<ion-content padding>
-   
- 
-  <div [ngSwitch]="appointmentSegment" *ngIf="profile.type == 'Employer'">
-    <ion-list *ngSwitchCase="'offered'">
-      <ion-item *ngFor="let user of offered" tappable (click)="viewUserProfile(user)">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.title}}</p>
-        <ion-icon name="arrow-forward" item-end></ion-icon>
-      </ion-item>
-    </ion-list>
-  
-    <ion-list *ngSwitchCase="'accepted'">
-      <ion-item *ngFor="let user of accepted" tappable (click)="viewUserProfile(user)">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.title}}</p>
-        <ion-icon name="arrow-forward" item-end></ion-icon>
-      </ion-item>
-    </ion-list>
+<ion-content>
+  <ion-list *ngIf="profile.type == 'Employer'">
+    <ion-item-divider padding color="light">List of People you requested service from:</ion-item-divider>
+    <ion-item *ngFor="let user of appointments" tappable (click)="viewUserProfile(user)">
+      <ion-avatar item-start>
+        <img src="http://placehold.it/200x200">
+      </ion-avatar>
+      <h2>{{user.firstname}} {{user.lastname}}</h2>
+      <p>{{user.title}}</p>
+      <div item-end>
+        <!-- <span class="date">Created on:</span> -->
+        <p> 
+          <ion-icon name="calendar" item-start></ion-icon>
+          {{getDateFormat(user.last_update)}} 
+        </p>
+      </div>
+    </ion-item>
+  </ion-list> 
 
-    <ion-list *ngSwitchCase="'rejected'">
-      <ion-item *ngFor="let user of rejected" tappable (click)="viewUserProfile(user)">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.title}}</p>
-        <ion-icon name="arrow-forward" item-end></ion-icon>
-      </ion-item>
-    </ion-list>
-  </div>
-
-  <div [ngSwitch]="appointmentSegment" *ngIf="profile.type == 'Employee'">
-    <ion-list *ngSwitchCase="'offered'">
-      <ion-item *ngFor="let user of offered">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.dob}}</p>
-      </ion-item>
-    </ion-list>
-  
-    <ion-list *ngSwitchCase="'accepted'">
-      <ion-item *ngFor="let user of accepted">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.dob}}</p>
-      </ion-item>
-    </ion-list>
-
-    <ion-list *ngSwitchCase="'rejected'">
-      <ion-item *ngFor="let user of rejected">
-        <ion-avatar item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-avatar>
-        <h2>{{user.firstname}} {{user.lastname}}</h2>
-        <p>{{user.dob}}</p>
-      </ion-item>
-    </ion-list>
-  </div>
-
+  <ion-list *ngIf="profile.type == 'Employee'">
+    <ion-item-divider padding color="light">List of Employers who showed interest in you:</ion-item-divider>
+    <ion-item *ngFor="let user of appointments" tappable (click)="viewUserProfile(user)">
+      <ion-avatar item-start>
+        <img src="http://placehold.it/200x200">
+      </ion-avatar>
+      <h2>{{user.firstname}} {{user.lastname}}</h2>
+      <p>{{user.title}}</p>
+      <div item-end>
+        <!-- <span class="date">Created on:</span> -->
+        <p> 
+          <ion-icon name="calendar" item-start></ion-icon>
+         {{getDateFormat(user.last_update)}} 
+        </p>
+       </div> 
+    </ion-item>
+  </ion-list> 
 
 </ion-content>
