--- a/src/pages/jobs/jobs.html
+++ b/src/pages/jobs/jobs.html
@@ -1,47 +1,24 @@
- 
 <ion-header>
-
   <ion-navbar color="dark">
-    <ion-title>Jobs</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title >My Jobs</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content>
-  <!-- <button ion-button block (click)="postJob()">Post</button> -->
-  <div class="job" *ngFor="let job of jobs">
-    <ion-list *ngIf="job" (click)="jobDetails(job)">
-      <ion-item >
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let job of myJobs">
+      <div *ngIf="job">
         <ion-thumbnail item-start>
-          <img src="http://placehold.it/100x100">
+          <img src="http://placehold.it/200x200">
         </ion-thumbnail>
         <h2>{{job.title}}</h2>
-        <p class="address">
-          <i class="fa fa-lg fa-clock-o" item-start></i>
-          {{job.address}}
-        </p>
-        <p text-wrap>{{job.tagline}}</p>
-      </ion-item>
-    </ion-list> 
-    <ion-list-header color="light">
-       <ion-grid>
-         <ion-row>
-           <ion-col col-4>
-              <i class="fa fa-lg fa-tag" item-start></i>
-              R{{job.salary}} {{job.frequency}}
-           </ion-col>
-           <ion-col col-4>
-              <i class="fa fa-lg fa-clock-o" item-start></i>
-              {{job.type}}
-           </ion-col> 
-           <ion-col col-4>
-              <i class="fa fa-calendar" item-start></i>
-              {{job.date_created}}
-           </ion-col> 
-         </ion-row>
-       </ion-grid>
-    </ion-list-header>
-  </div>
-          
+        <p>{{job.type }} | {{job.salary}}</p>
+        <button ion-button clear item-end>View</button>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
