--- a/src/pages/my-jobs/my-jobs.html
+++ b/src/pages/my-jobs/my-jobs.html
@@ -1,25 +1,63 @@
- 
 <ion-header>
   <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>My Jobs</ion-title>
+    <ion-title *ngIf="profile && profile.type == 'Employee'">Applied Jobs</ion-title>
+    <ion-title *ngIf="profile && profile.type == 'Employer'">Posted Jobs</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding> 
 
-  <ion-list>
-    <ion-item *ngFor="let job of myJobs" tappable (click)="jobDetails(job)">
-      <ion-thumbnail item-start>
-        <img src="http://placehold.it/200x200">
-      </ion-thumbnail>
-      <h2 *ngIf="job">{{job.title}}</h2>
-      <p *ngIf="job">{{job.category}}</p>
-      <p *ngIf="job">{{job.type }} | R{{job.salary}}</p>
-      <button ion-button clear item-end>View</button>
-    </ion-item>
+  <ion-list *ngIf="profile && profile.type == 'Employee'">
+    <div *ngIf="myJobs.length < 1">
+      <ion-item-divider >
+        <h2> My Posted Jobs</h2>
+      </ion-item-divider>
+      <ion-item text-wrap>
+        <!-- <img src="http://placehold.it/200x200">  -->
+        <h2>You haver not applied for any job yet.</h2> 
+        <p>All jobs you have applied for will appear and managed here.</p>
+      </ion-item>
+    </div> 
+    <div *ngIf="myJobs.length > 0">
+      <ion-item *ngFor="let job of myJobs" tappable (click)="jobDetails(job)">
+        <ion-thumbnail item-start>
+          <img src="http://placehold.it/200x200">
+        </ion-thumbnail>
+        <h2 *ngIf="job">{{job.title}}</h2>
+        <p *ngIf="job">{{job.category}}</p>
+        <p *ngIf="job">{{job.type }} | R{{job.salary}}</p>
+        <button ion-button clear item-end>View</button>
+      </ion-item>
+    </div>
+  </ion-list> 
+
+  
+  <ion-list *ngIf="profile && profile.type == 'Employer'">
+    <div *ngIf="postedJobs.length < 1">
+      <ion-item-divider >
+        <h2> My Posted Jobs</h2>
+      </ion-item-divider>
+      <ion-item text-wrap>
+        <!-- <img src="http://placehold.it/200x200">  -->
+        <h2>You haver not posted any job yet.</h2> 
+        <p>All your posted jobs will appear and managed here.</p>
+      </ion-item>
+    </div> 
+    <div *ngIf="postedJobs.length > 0">
+      <ion-item-divider> My Posted Jobs</ion-item-divider>
+      <ion-item *ngFor="let job of postedJobs" tappable (click)="jobDetails(job)">
+        <ion-thumbnail item-start>
+          <img src="http://placehold.it/200x200">
+        </ion-thumbnail>
+        <h2 *ngIf="job">{{job.title}}</h2>
+        <p *ngIf="job">{{job.category}}</p>
+        <p *ngIf="job">{{job.type }} | R{{job.salary}}</p>
+        <button ion-button clear item-end>View</button>
+      </ion-item>
+    </div>
   </ion-list> 
 </ion-content>
