--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the StatsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
+ <ion-header>
   <ion-navbar>
-    <ion-title>stats</ion-title>
+    <ion-title>Job Statistics</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding> 
+  <ion-list>
+    <ion-item *ngFor="let user of appliedUsers" tappable >
+      <ion-avatar item-start>
+        <img src="http://placehold.it/200x200">
+      </ion-avatar>
+      <h2 *ngIf="user">{{user.firstname}} {{user.lastname}}</h2>
+      <p *ngIf="user">{{user.gender}}</p>
+      <button ion-button clear item-end>View</button>
+    </ion-item>
+  </ion-list> 
 </ion-content>
+    
