--- a/src/pages/job-details/job-details.html
+++ b/src/pages/job-details/job-details.html
@@ -15,6 +15,7 @@
     <i class="fa fa-4x fa-briefcase" ></i>  
     <h2>{{ job.title }}</h2>
     <p>{{ job.type }} | {{job.salary == 'Neg' ? "Negotiable" : "R"+job.salary}}</p>
+    <h2 *ngIf="count">{{count}}</h2>
     <!-- <h2>
       <button color="light" ion-button clear icon-only>
         <ion-icon name="heart"></ion-icon>
