--- a/src/pages/job-details/job-details.html
+++ b/src/pages/job-details/job-details.html
@@ -3,9 +3,9 @@
     <ion-title>
       Job Details
     </ion-title>
-    <!-- <ion-buttons end>
-      <button ion-button ><ion-icon name="information"></ion-icon>Info</button>
-    </ion-buttons>  -->
+    <ion-buttons *ngIf="job" end>
+      <button ion-button icon-left (click)="shareJobActionSheet(job)"><ion-icon name="share-alt"></ion-icon>Share</button>
+    </ion-buttons> 
   </ion-navbar>
 </ion-header>
 
@@ -15,16 +15,24 @@
     <i class="fa fa-4x fa-briefcase" ></i>  
     <h2>{{ job.title }}</h2>
     <p>{{ job.type }} | {{job.salary == 'Neg' ? "Negotiable" : "R"+job.salary}}</p>
-    <h2 *ngIf="count">{{count}}</h2>
-    <!-- <h2>
-      <button color="light" ion-button clear icon-only>
-        <ion-icon name="heart"></ion-icon>
-      </button>
-      <button color="light" ion-button clear icon-only>
-        <ion-icon name="share-alt"></ion-icon>
-      </button>
-    </h2> -->
+    <ion-grid class="info">
+      <ion-row>
+        <ion-col col-4>
+          <h2>{{countShared}}</h2>
+          <p>Shares</p> 
+        </ion-col>
+        <ion-col col-4>
+          <h2>{{countViews}}</h2>
+          <p>Views</p> 
+        </ion-col>
+        <ion-col col-4>
+          <h2>{{countApplied}}</h2>
+          <p>Applied</p> 
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+
 
   <ion-list *ngIf="job"> 
     <ion-item-divider>
@@ -65,6 +73,7 @@
     <div padding [hidden]="!applied">
       <button ion-button  block (click)="withdrawApplication(job)">Withdraw Application</button>
     </div>
+ 
   </ion-list>
    
 </ion-content>
