--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -33,7 +33,7 @@
     </ion-item>
   </ion-list>
 
-  <button ion-button block color="dark" round (click)="sendOTP()">Verify Email Adddress</button>
+  <button ion-button block color="dark"  (click)="sendOTP()">Verify Email Adddress</button>
   <button ion-button block color="dark" clear (click)="dismiss()">Cancel Registration</button>
   
 </ion-content>
