--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,15 +1,7 @@
-
-
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Signup</ion-title>
-  </ion-navbar>
-
-</ion-header>
+<ion-header></ion-header>
 
 <ion-content padding>
-  <ion-grid>
+  <ion-grid class="logo">
     <ion-row>
       <ion-col col-3></ion-col>
       <ion-col col-6>
