--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-navbar color="dark">
+<ion-header >
+  <ion-navbar >
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -38,7 +38,7 @@
         <ion-list *ngIf="job" (click)="jobDetails(job)">
           <ion-item class="main">
             <ion-thumbnail item-start>
-              <img src="http://placehold.it/100x100">
+              <!-- <img src="assets/pipes.svg"> -->
             </ion-thumbnail>
             <h2>{{job.title}}</h2>
             <p>
