--- a/src/pages/jobs/jobs.html
+++ b/src/pages/jobs/jobs.html
@@ -1,24 +1,58 @@
-<ion-header>
+<ion-header >
   <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title >My Jobs</ion-title>
+    <ion-title>Jobs</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only >
+        <ion-icon name="more"></ion-icon>
+      </button> 
+    </ion-buttons> 
   </ion-navbar>
+  <ion-toolbar color="dark">
+    <ion-searchbar [(ngModel)]="searchTerm" placeholder="Search jobs..." [formControl]="searchControl" (ionInput)="onSearchInput()"></ion-searchbar>
+    <div *ngIf="searching" class="spinner-container">
+      <ion-spinner></ion-spinner>
+    </div>
+  </ion-toolbar>
+   
 </ion-header>
 
 
-<ion-content padding>
-  <ion-list>
-    <ion-item *ngFor="let job of myJobs">
-      <div *ngIf="job">
-        <ion-thumbnail item-start>
-          <img src="http://placehold.it/200x200">
-        </ion-thumbnail>
+<ion-content>
+  <div class="job" *ngFor="let job of jobs">
+    <ion-list *ngIf="job" (click)="jobDetails(job)">
+      <ion-item>
         <h2>{{job.title}}</h2>
-        <p>{{job.type }} | {{job.salary}}</p>
-        <button ion-button clear item-end>View</button>
+        <ion-thumbnail item-start>
+          <img src="assets/categories/{{job.category}}.svg">
+        </ion-thumbnail>
+        <p>
+          <i class="fa fa-map-marker-alt" item-start></i>
+          {{job.address}}
+        </p>
+        <p text-wrap>
+          <i class="fa fa-tag" item-start></i>
+          {{job.type}} |  {{job.salary == 'Neg' ? "Negotiable" : "R"+ job.salary}} 
+        </p>
+        <!-- <p text-wrap>
+          <i class="fa fa-money-bill-alt" item-start></i>
+          {{job.salary == 'Neg' ? "Negotiable" : "R"+ job.salary}} 
+        </p> -->
+      </ion-item>
+    </ion-list> 
+    <ion-list-header color="light">
+      <div item-start> 
+        <button clear color="dark" ion-button icon-left (click)="share(job)">
+          <ion-icon name="share"></ion-icon>
+          Share Job
+        </button>
       </div>
-    </ion-item>
-  </ion-list>
+      <div item-end class="right">
+        <i class="fa fa-calendar" item-start></i>
+        {{getMoment(job)}}
+      </div> 
+    </ion-list-header>
+  </div>
 </ion-content>
