--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -1,5 +1,5 @@
  <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>Job Statistics</ion-title>
   </ion-navbar>
 </ion-header>
