--- a/src/pages/job-details/job-details.html
+++ b/src/pages/job-details/job-details.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>
       Job Details
     </ion-title>
@@ -12,7 +12,8 @@
 <ion-content>
 
   <div class="banner" *ngIf="job">
-    <i class="fa fa-4x fa-briefcase" ></i>  
+    <!-- <i class="fa fa-4x fa-briefcase" ></i>   -->
+    <img src="assets/categories/{{job.category}}.svg">
     <h2>{{ job.title }}</h2>
     <p>{{ job.type }} | {{job.salary == 'Neg' ? "Negotiable" : "R"+job.salary}}</p>
     <ion-grid class="info">
@@ -34,13 +35,13 @@
   </div>
 
 
-  <ion-list *ngIf="job"> 
-    <ion-item-divider>
+  <ion-list *ngIf="job" > 
+    <!-- <ion-item-divider>
       Information
       <p item-end>Posted: {{ post_time }}</p>  
-    </ion-item-divider>
+    </ion-item-divider> -->
 
-    <ion-card-content>
+    <ion-card-content class="job">
       <ion-item text-wrap>
         <ion-icon name="briefcase" item-start></ion-icon>
         <h2>Description</h2>
@@ -56,7 +57,7 @@
       <ion-item text-wrap>
         <ion-icon name="hammer" item-start></ion-icon>
         <h2>Skills</h2>
-        <ion-badge *ngFor="let skill of getSkills(job.skills)">{{skill}}</ion-badge> 
+        <ion-badge color="dark" *ngFor="let skill of getSkills(job.skills)">{{skill}}</ion-badge> 
       </ion-item>
 
       <ion-item text-wrap>
@@ -68,10 +69,10 @@
     </ion-card-content>
     
     <div padding [hidden]="applied">
-      <button ion-button  block (click)="applyNow(job)">Apply now</button>
+      <button ion-button  color="dark" block (click)="applyNow(job)">Apply now</button>
     </div>
     <div padding [hidden]="!applied">
-      <button ion-button  block (click)="withdrawApplication(job)">Withdraw Application</button>
+      <button ion-button  color="dark" block (click)="withdrawApplication(job)">Withdraw Application</button>
     </div>
  
   </ion-list>
