--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -1,13 +1,66 @@
- <ion-header>
-  <ion-navbar color="dark">
-    <ion-title>Job Statistics</ion-title>
+<ion-header>
+  <ion-navbar color="dark"> 
+    <ion-title >Stats</ion-title>
   </ion-navbar>
+  <ion-toolbar>
+    <ion-segment [(ngModel)]="stats" color="light">
+        <ion-segment-button value="views">
+          Viewed
+        </ion-segment-button>
+        <ion-segment-button value="applied">
+          Applied
+        </ion-segment-button>
+    </ion-segment>
+  </ion-toolbar>
 </ion-header>
 
+<ion-content padding>  
+  <div [ngSwitch]="stats">
+    <div *ngIf="job && job.viewedUsers">
+      <ion-list *ngSwitchCase="'views'" >
+        <ion-item *ngFor="let user of job.viewedUsers" >
+          <ion-avatar item-start>
+            <img src="http://placehold.it/200x200">
+          </ion-avatar>
+          <h2 *ngIf="user">{{user.firstname}} {{user.lastname}}</h2>
+          <p *ngIf="user">{{user.gender}}</p>
+        </ion-item>
+      </ion-list> 
+    </div>
+ 
+    <div *ngSwitchCase="'applied'">
+      <ion-list *ngIf="job && job.appliedUsers">
+        <ion-item *ngFor="let user of job.appliedUsers" >
+          <ion-avatar item-start>
+            <img src="http://placehold.it/200x200">
+          </ion-avatar>
+          <h2 *ngIf="user">{{user.firstname}} {{user.lastname}}</h2>
+          <p *ngIf="user">{{user.gender}}</p>
+        </ion-item>
+      </ion-list> 
+      <ion-list *ngIf="job && !job.appliedUsers">
+        <h2>No one has applied for this job yet</h2>
+      </ion-list>
+    </div>
+  </div>
+</ion-content>
 
+<!-- 
 <ion-content padding> 
-  <ion-list>
-    <ion-item *ngFor="let user of appliedUsers" tappable >
+  <ion-list *ngIf="job && job.viewedUsers">
+      <h2>Users viewed jobs</h2>
+    <ion-item *ngFor="let user of job.viewedUsers" tappable >
+      <ion-avatar item-start>
+        <img src="http://placehold.it/200x200">
+      </ion-avatar>
+      <h2 *ngIf="user">{{user.firstname}} {{user.lastname}}</h2>
+      <p *ngIf="user">{{user.gender}}</p>
+      <button ion-button clear item-end>View</button>
+    </ion-item>
+  </ion-list> 
+  <ion-list *ngIf="job && job.appliedUsers">
+    <h2>Applied users</h2>
+    <ion-item *ngFor="let user of job.appliedUsers" tappable >
       <ion-avatar item-start>
         <img src="http://placehold.it/200x200">
       </ion-avatar>
@@ -17,4 +70,4 @@
     </ion-item>
   </ion-list> 
 </ion-content>
-    
+     -->
